# jedi-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  PackageConfig.cmake.in  README.md  jcsda-Discover-Intel.cmake
cmake/: Modules
cmake/Functions/: git_functions.cmake
cmake/Modules/: FindNetCDF.cmake  FindPIO.cmake  FindPnetCDF.cmake  Findudunits.cmake
cmake/Toolchains/: jcsda-AWS-NVHPC.cmake  jcsda-Casper-Intel.cmake  jcsda-Cheyenne-Intel.cmake  jcsda-Discover-Intel.cmake  jcsda-Orion-Intel.cmake  jcsda-S4-Intel.cmake
